--- a/style.css
+++ b/style.css
@@ -57,3 +57,26 @@ body{
     border-radius: 15px;
     margin-bottom:5%;
 }
+
+
+
+
+
+/* for responsivity */
+@media (max-width:767px){
+    .container{
+        margin-top:2%;
+        justify-content: center;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+}
+
+@media (max-width: 576px){
+    .container{
+        margin-top:2%;
+        justify-content: center;
+        padding-left: 3%;
+        padding-right: 3%;
+    }
+}
